testsuite/tests/typing-layouts-products/parsing_nullary_type.compilers.reference
File "parsing_nullary_type.ml", line 11, characters 11-12:
11 | type t = #()
                ^
Error: Syntax error
